--- a/docs/pages/setup/guides/joining-nodes-aws.mdx
+++ b/docs/pages/setup/guides/joining-nodes-aws.mdx
@@ -9,7 +9,7 @@ Teleport cluster without sharing any secrets when they are running in AWS.
 
 <Admonition type="note">
 You can still use secret tokens to join the cluster, see the
-[Getting Started](../../getting-started/linux-server/#add-a-node-to-the-cluster)
+[Getting Started](../../getting-started/linux-server.mdx#add-a-node-to-the-cluster)
 guide. The following AWS join methods are meant to make deployment simpler by
 eliminating the need to distribute secrets when your Nodes or Proxies are
 running in AWS.
