--- a/docs/pages/setup/guides/fluentd.mdx
+++ b/docs/pages/setup/guides/fluentd.mdx
@@ -1,6 +1,7 @@
 ---
 title: Forwarding events with Fluentd
 description: Forwarding events with Fluentd and Teleport event handler
+videoBanner: PPMGcr54Mwk
 ---
 
 This section will cover:
