--- a/docs/pages/cloud/guides/webauthn.mdx
+++ b/docs/pages/cloud/guides/webauthn.mdx
@@ -58,7 +58,7 @@ $ tctl create -f cap.yaml
 ```
 
 Refer to the [WebAuthn access control guide](
-../../access-controls/guides/webauthn/#enable-webauthn) for additional
+../../access-controls/guides/webauthn/#enable-webauthn-support) for additional
 configuration settings.
 
 ## Step 3/3. Add WebAuthn device
