--- a/docs/pages/access-controls/guides/webauthn.mdx
+++ b/docs/pages/access-controls/guides/webauthn.mdx
@@ -26,7 +26,7 @@ If you are upgrading from a Teleport version configured to use U2F, see the
 [Migrating from U2F](#migrating-from-u2f) section below; otherwise start at
 [Enable WebAuthn support](#enable-webauthn-support).
 
-## Enable WebAuthn support
+## Step 1/3. Enable WebAuthn support
 
 WebAuthn is disabled by default. To enable WebAuthn support, edit the Teleport
 configuration file `/etc/teleport.yaml` like so:
@@ -68,7 +68,7 @@ The fields in the above snippet are:
   Devices within this list will be rejected during registration. By default no
   devices are forbidden.
 
-## Register WebAuthn devices as a user
+## Step 2/3. Register WebAuthn devices as a user
 
 A user can register multiple WebAuthn devices [using `tsh`](
 ../../setup/reference/cli.mdx#tsh-mfa-add):
@@ -86,7 +86,7 @@ $ tsh mfa add
   WebAuthn devices are currently not supported in `tsh` on Windows.
 </Admonition>
 
-## Login using WebAuthn
+## Step 3/3. Login using WebAuthn
 
 Once a WebAuthn device is registered, the user will be prompted for it on login:
 
