--- a/docs/pages/access-controls/guides/webauthn.mdx
+++ b/docs/pages/access-controls/guides/webauthn.mdx
@@ -18,9 +18,13 @@ and Web UI), as well as biometric authenticators like Touch ID and Windows Hello
 
 - Installed [Teleport](../getting-started.mdx) or [Teleport Cloud](
   ../../cloud/introduction.mdx) >= (=teleport.version=)
+- [Tctl admin tool](https://goteleport.com/teleport/download) >=
+  (=teleport.version=).
 - WebAuthn hardware device, such as YubiKey or SoloKey
 - A Web browser with [WebAuthn support](
   https://developers.yubico.com/WebAuthn/WebAuthn_Browser_Support/)
+
+(!docs/pages/includes/tctl.mdx!)
 
 If you are upgrading from a Teleport version configured to use U2F, see the
 [Migrating from U2F](#migrating-from-u2f) section below; otherwise start at
