--- a/docs/pages/access-controls/guides/webauthn.mdx
+++ b/docs/pages/access-controls/guides/webauthn.mdx
@@ -28,7 +28,7 @@ and Web UI), as well as biometric authenticators like Touch ID and Windows Hello
 
 If you are upgrading from a Teleport version configured to use U2F, see the
 [Migrating from U2F](#migrating-from-u2f) section below; otherwise start at
-[Enable WebAuthn support](#enable-webauthn-support).
+[Enable WebAuthn support](#step-13-enable-webauthn-support).
 
 ## Step 1/3. Enable WebAuthn support
 
@@ -88,7 +88,6 @@ The fields in the above snippets are:
 
 - `rp_id` - public domain of the Teleport proxy, *excluding* protocol
   (`https://`) and port number
-
 - `attestation_allowed_cas` - optional allow list of certificate authorities (as
   local file paths or in-line PEM certificate string) for [device verification](
   https://developers.yubico.com/WebAuthn/WebAuthn_Developer_Guide/Attestation.html).
@@ -97,7 +96,6 @@ The fields in the above snippets are:
   all devices are allowed.
   If you must use attestation, consider using `attestation_denied_cas` to
   forbid troublesome devices instead.
-
 - `attestation_denied_cas` - optional deny list of certificate authorities (as
   local file paths or in-line PEM certificate string) for [device verification](
   https://developers.yubico.com/WebAuthn/WebAuthn_Developer_Guide/Attestation.html).
@@ -255,7 +253,6 @@ The fields in the above snippet are:
 - `rp_id` - public domain of the Teleport proxy, *excluding* protocol
   (`https://`) and port number.
   Inferred from U2F `app_id` if not present.
-
 - `attestation_allowed_cas` - optional allow list of certificate authorities (as
   local file paths or in-line PEM certificate string) for [device verification](
   https://developers.yubico.com/WebAuthn/WebAuthn_Developer_Guide/Attestation.html).
@@ -265,7 +262,6 @@ The fields in the above snippet are:
   If you must use attestation, consider using `attestation_denied_cas` to
   forbid troublesome devices instead.
   Copied from U2F `device_attestation_cas` if not present.
-
 - `attestation_denied_cas` - optional deny list of certificate authorities (as
   local file paths or in-line PEM certificate string) for [device verification](
   https://developers.yubico.com/WebAuthn/WebAuthn_Developer_Guide/Attestation.html).
