--- a/docs/pages/desktop-access/getting-started.mdx
+++ b/docs/pages/desktop-access/getting-started.mdx
@@ -32,10 +32,10 @@ This guide requires you to have:
 
 ## Step 1/5: Create a User, Group, and Group Policy Object
 
-Teleport requires a service account to connect to your Active Directory domain. In theory any account with the required permissions can be used;
-we recommend creating a dedicated service account with restrictive permissions (described below) for maximal security.
+Teleport requires a service account to connect to your Active Directory domain. We recommend creating a dedicated service account with restrictive permissions
+(described below) for maximal security.
 
-### Create User and Group
+### Create a User and Group
 
 From the start menu of your Domain Controller, search for “Active Directory Users and Computers” and open the corresponding program.
 
